CHANGES IN FLTK 1.1.7

	- Documentation fixes (STR #571, STR #648, STR #692, STR
	  #730, STR #744, STR #745, STR #931, STR #942, STR #960,
	  STR #969)
	- FLUID selection boxes now synchronised (STR #964)
	- fl_filename_list now recognizes pathnames without trailing 
	  slash as directions (STR #854)
	- Fl_Text_Display now auto-scrolls in all 
	  directions (STR #915)
	- Borderless windows will not show in the taskbar anymore
	  on X11 (STR #933)
	- Fixed event_text() field on FL_DND_* event on 
	  OS X and WIN32 (STR #968)
	- The fltk-config utility now supports "--cc" and "--cxx"
	  options to get the C and C++ compilers that were used
	  to compile FLTK (STR #868)
	- Fl_Valuator-derived widgets could show more digits than
	  were necessary (STR #971)
	- Fl_GIF_Image did not handle images with an incorrect
	  number of data bits (STR #914)
	- Fixed some plastic drawing artifacts (STR #906)
	- Fl_Help_View now draws the box outside the scrollbars,
	  like the other scrollable widgets (STR #871)
	- The fltk-config script now handles invocation via a
	  symlink (STR #869)
	- Updated WIN32 cut/paste code to consistently handle DOS
	  text (STR #961)
	- Added shared library support for Cygwin and MingW (STR
	  #893)
	- Fl_File_Chooser did not implement the user_data()
	  methods (STR #970)
	- Compilation could fail if a previous installation of
	  FLTK was in the same (non-standard) directory as an
	  image library (STR #926)
	- Fixed OSX compilation problems with non-HFS filesystems
	  (STR #972)
	- Problems with CMake on MinGW have been solved, thanks
	  to Mr. "fltk.x0", who submitted the patch. (STR #863)
	- Fixed memory leak in Fl_Check_Browser reported by
	  "miguel2i". (STR #967)
	- Fl_File_Input could draw in the wrong window (STR #958)
	- WIN32: Internal WM_PAINT message now ignored (STR #831)
	- Added Windows support for Fl_Window::xclass() (STR #848)
	- Floating point input field allows characters from
	  current locale (STR #903)